修复管理后台404错误：通过API路由提供静态资源，修改资源引用路径

--- a/ai-reply-verifier-backend/vercel.json
+++ b/ai-reply-verifier-backend/vercel.json
@@ -19,7 +19,8 @@
     ],
     "routes": [
         { "src": "/admin", "dest": "/api/admin" },
-        { "src": "/admin/(.*)", "dest": "/admin/$1" },
+        { "src": "/admin/style.css", "dest": "/api/admin/style" },
+        { "src": "/admin/script.js", "dest": "/api/admin/script" },
         { "src": "/", "dest": "/api/index" }
     ]
 } 
