--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,28 @@
 {
-  "redirects": [
-    { "source": "/", "destination": "/ai-reply-verifier-backend/public/admin/", "permanent": true }
+  "version": 2,
+  "routes": [
+    { "src": "/", "dest": "/ai-reply-verifier-backend/public/admin/index.html" },
+    { "src": "/admin", "dest": "/ai-reply-verifier-backend/public/admin/index.html" },
+    { "src": "/admin/(.*)", "dest": "/ai-reply-verifier-backend/public/admin/$1" },
+    { "handle": "filesystem" },
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/ai-reply-verifier-backend/public/admin/$1" }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-Requested-With, Content-Type, Accept, Authorization" },
+        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
+      ]
+    },
+    {
+      "source": "/(.*)\\.(js|css|svg|png|jpg|jpeg|gif|ico)$",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    }
   ]
 } 
