全面修复管理后台：1.修复登录和授权验证 2.修复日期选择器和表单提交 3.优化API请求和错误处理 4.添加路由重定向

--- a/ai-reply-verifier-backend/vercel.json
+++ b/ai-reply-verifier-backend/vercel.json
@@ -6,6 +6,12 @@
             "maxDuration": 10
         }
     },
+    "redirects": [
+        { "source": "/", "destination": "/admin/", "permanent": true }
+    ],
+    "rewrites": [
+        { "source": "/api/(.*)", "destination": "/api/$1" }
+    ],
     "headers": [
         {
             "source": "/api/(.*)",
