--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "AI回复点评助手管理系统",
   "main": "index.js",
   "scripts": {
-    "start": "serve -s ."
+    "start": "vercel dev",
+    "deploy": "vercel --prod"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "dependencies": {
-    "serve": "^14.0.0"
+    "@upstash/redis": "^1.20.6",
+    "@vercel/kv": "^0.2.2",
+    "jsonwebtoken": "^9.0.0"
   }
 } 
