--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,28 @@
 {
-  "regions": ["hnd1"],
-  "buildCommand": "echo 'Building...'",
-  "outputDirectory": ".",
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/admin", "destination": "/admin/index.html" },
-    { "source": "/admin/(.*)", "destination": "/admin/$1" },
-    { "source": "/", "destination": "/index.html" }
-  ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" },
-        { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0" },
-        { "key": "Pragma", "value": "no-cache" },
-        { "key": "Expires", "value": "0" }
-      ]
-    }
+  "version": 2,
+  "routes": [
+    { 
+      "src": "/(.*)\\.(?:js|css|svg|png|jpg|jpeg|gif|ico)$",
+      "headers": { 
+        "cache-control": "public, max-age=31536000, immutable" 
+      },
+      "continue": true
+    },
+    { 
+      "src": "/(.*)",
+      "headers": { 
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept, Authorization",
+        "Cache-Control": "public, max-age=0, must-revalidate"
+      },
+      "continue": true
+    },
+    { "src": "/", "dest": "/ai-reply-verifier-backend/public/admin/index.html" },
+    { "src": "/admin", "dest": "/ai-reply-verifier-backend/public/admin/index.html" },
+    { "src": "/admin/(.*)", "dest": "/ai-reply-verifier-backend/public/admin/$1" },
+    { "handle": "filesystem" },
+    { "src": "/api/(.*)", "dest": "/ai-reply-verifier-backend/api/$1" },
+    { "src": "/(.*)", "dest": "/ai-reply-verifier-backend/public/admin/$1" }
   ]
 } 
