--- a/vercel.json
+++ b/vercel.json
@@ -18,11 +18,13 @@
       },
       "continue": true
     },
+    { "src": "/api/admin/licenses", "dest": "/ai-reply-verifier-backend/api/admin/licenses.js" },
+    { "src": "/api/admin/(.*)", "dest": "/ai-reply-verifier-backend/api/admin/$1" },
+    { "src": "/api/(.*)", "dest": "/ai-reply-verifier-backend/api/$1" },
+    { "handle": "filesystem" },
     { "src": "/", "dest": "/ai-reply-verifier-backend/public/admin/index.html" },
     { "src": "/admin", "dest": "/ai-reply-verifier-backend/public/admin/index.html" },
     { "src": "/admin/(.*)", "dest": "/ai-reply-verifier-backend/public/admin/$1" },
-    { "handle": "filesystem" },
-    { "src": "/api/(.*)", "dest": "/ai-reply-verifier-backend/api/$1" },
     { "src": "/(.*)", "dest": "/ai-reply-verifier-backend/public/admin/$1" }
   ]
 } 
