修复accounts API 404错误：将Redis客户端从@upstash/redis更改为@vercel/kv，添加API路由配置

--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,7 @@
       "continue": true
     },
     { "src": "/api/admin/licenses", "dest": "/ai-reply-verifier-backend/api/admin/licenses.js" },
+    { "src": "/api/admin/accounts", "dest": "/ai-reply-verifier-backend/api/admin/accounts.js" },
     { "src": "/api/admin/(.*)", "dest": "/ai-reply-verifier-backend/api/admin/$1" },
     { "src": "/api/(.*)", "dest": "/ai-reply-verifier-backend/api/$1" },
     { "handle": "filesystem" },
