--- a/vercel.json
+++ b/vercel.json
@@ -14,19 +14,19 @@
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept, Authorization",
-        "Access-Control-Allow-Credentials": "true",
         "Cache-Control": "public, max-age=0, must-revalidate"
       },
       "continue": true
     },
     { "src": "/api/admin/licenses", "dest": "/ai-reply-verifier-backend/api/admin/licenses.js" },
     { "src": "/api/admin/accounts", "dest": "/ai-reply-verifier-backend/api/admin/accounts.js" },
+    { "src": "/api/admin/dashboard", "dest": "/ai-reply-verifier-backend/api/admin/dashboard.js" },
     { "src": "/api/admin/(.*)", "dest": "/ai-reply-verifier-backend/api/admin/$1" },
     { "src": "/api/(.*)", "dest": "/ai-reply-verifier-backend/api/$1" },
     { "handle": "filesystem" },
-    { "src": "/", "dest": "/ai-reply-verifier-backend/public/admin/index.html" },
     { "src": "/admin", "dest": "/ai-reply-verifier-backend/public/admin/index.html" },
-    { "src": "/admin/(.*)", "dest": "/ai-reply-verifier-backend/public/admin/$1" },
+    { "src": "/admin/(.*)", "dest": "/ai-reply-verifier-backend/public/admin/index.html" },
+    { "src": "/", "dest": "/ai-reply-verifier-backend/public/admin/index.html" },
     { "src": "/(.*)", "dest": "/ai-reply-verifier-backend/public/admin/$1" }
   ]
 } 
