--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,10 +29,17 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
         
+      - name: Prepare deployment files
+        run: |
+          mkdir -p ./deploy
+          cp -r ./ai-reply-verifier-backend/public/admin/* ./deploy/
+          cp ./404.html ./deploy/
+          cp ./index.html ./deploy/
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './ai-reply-verifier-backend/public/admin'
+          path: './deploy'
           
       - name: Deploy to GitHub Pages
         id: deployment
