--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@upstash/redis": "^1.20.6",
     "@vercel/kv": "^0.2.2",
+    "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.0"
   }
-} 
+}
