修复API路由问题：添加/api/admin/accounts/me路径处理，增强日志记录

--- a/ai-reply-verifier-backend/vercel.json
+++ b/ai-reply-verifier-backend/vercel.json
@@ -11,6 +11,7 @@
         { "source": "/", "destination": "/admin/", "permanent": true }
     ],
     "rewrites": [
+        { "source": "/api/admin/accounts/me", "destination": "/api/admin/accounts" },
         { "source": "/api/(.*)", "destination": "/api/$1" }
     ],
     "headers": [
