--- a/ai-reply-verifier-backend/vercel.json
+++ b/ai-reply-verifier-backend/vercel.json
@@ -1,44 +1,15 @@
 {
-    "public": true,
-    "regions": ["hnd1"],
-    "functions": {
-        "api/**/*.js": {
-            "memory": 128,
-            "maxDuration": 10
-        }
-    },
-    "redirects": [
-        { "source": "/", "destination": "/admin/", "permanent": true }
-    ],
-    "rewrites": [
-        { "source": "/api/admin/accounts/me", "destination": "/api/admin/accounts" },
-        { "source": "/api/(.*)", "destination": "/api/$1" }
-    ],
-    "headers": [
+    "version": 2,
+    "builds": [
         {
-            "source": "/api/(.*)",
-            "headers": [
-                { "key": "Access-Control-Allow-Credentials", "value": "true" },
-                { "key": "Access-Control-Allow-Origin", "value": "*" },
-                { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-                { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" },
-                { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0" },
-                { "key": "Pragma", "value": "no-cache" },
-                { "key": "Expires", "value": "0" }
-            ]
-        },
-        {
-            "source": "/(.*)",
-            "headers": [
-                { "key": "X-Content-Type-Options", "value": "nosniff" },
-                { "key": "X-Frame-Options", "value": "DENY" },
-                { "key": "X-XSS-Protection", "value": "1; mode=block" },
-                { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
-                { "key": "Content-Security-Policy", "value": "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' https://*; frame-ancestors 'none'" }
-            ]
+            "src": "index.js",
+            "use": "@vercel/node"
         }
     ],
-    "env": {
-        "VERCEL": "1"
-    }
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "index.js"
+        }
+    ]
 } 
